Se connecter et se souvenir de moi Ok

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,9 +3,10 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
+<div  class="offset-3 col-6">
 <form method="post">
     {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger"> Identifiant ou mot de passe incorrect{#*{{ error.messageKey|trans(error.messageData, 'security') }}*/#}</div>
     {% endif %}
 
     {% if app.user %}
@@ -14,29 +15,33 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
+
+    <label for="inputEmail">Identifiant</label>
+    <input type="texte" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="email ou pseudo" autocomplete="email" required autofocus>
+    <label for="inputPassword">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+
+
+
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
 
+    <div>
         <div class="checkbox mb-3">
             <label>
-                <input type="checkbox" name="_remember_me"> Remember me
+                <input type="checkbox" name="_remember_me"> Se souvenir de moi
             </label>
         </div>
-    #}
 
+
+        <a href="#" >Mot de passe oublié</a>
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        Connexion
     </button>
+    </div>
 </form>
+</div>
 {% endblock %}
