--- a/templates/main/afficherprofil.html.twig
+++ b/templates/main/afficherprofil.html.twig
@@ -5,35 +5,45 @@
 {% endblock %}
 
 {% block body %}
-    <h1> Profil de {{participant.pseudo}}</h1>
+    <h1>Mon profil</h1>
+    <div class="container row">
+    <div class="col-lg-6">
+        <img src="{{ participant.photo }}">
+    </div>
+    <div class="col-lg-6">
+        <div class="row-prenom">
+            <p>Prénom :</p>
+            <p>{{ participant.prenom }}</p>
+        </div>
+        <div class="row-nom">
+            <p>Nom :</p>
+            <p>{{ participant.nom }}</p>
+        </div>
+        <div class="row-telephone">
+            <p>Téléphone :</p>
+            <p>{{ participant.telephone }}</p>
+        </div>
+        <div class="row-email">
+            <p>Email :</p>
+            <p>{{ participant.email }}</p>
+        </div>
+        <div class="row-ville">
+            <p>Ville :</p>
+            <p>{{ participant.site.getNom }}</p>
+        </div>
+    </div>
+    </div>
 
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Pseudo</th>
-            <th>Prenom</th>
-            <th>Nom</th>
-            <th>Telephone</th>
-            <th>Email</th>
-            <th>Password</th>
-            <th>Site</th>
-            <th>Photo</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>{{participant.pseudo}}</td>
-            <td>{{participant.prenom}}</td>
-            <td>{{participant.nom}}</td>
-            <td>{{participant.telephone}}</td>
-            <td>{{participant.email}}</td>
-            <td>{{participant.password}}</td>
-            <td>{{participant.site}}</td>
-            <td>{{participant.photo}}</td>
-        </tr>
-        <tbody>
+    <div class="row">
+        <div class="btn-container">
+            <a href="{{ path('main') }}">Retour</a>
+        </div>
+        <div class="btn-container">
+            <a href="{{ path('edit_profil', {id: participant.id}) }}" class="btn btn-outline-success">Modifier</a>
+        </div>
+    </div>
 
-    </table>
+
 
 
 {% endblock %}
