--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,12 +1,40 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="row">
+    <table class="table table-striped table-hover">
+        <thead>
+        <tr>
+            <th scope="col">Nom de la sortie</th>
+            <th scope="col">Date de la sortie</th>
+            <th scope="col">Clôture</th>
+            <th scope="col">Inscrits/places</th>
+            <th scope="col">Etat</th>
+            <th scope="col">Inscrit</th>
+            <th scope="col">Organisateur</th>
+            <th scope="col">Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for s in sorties %}
+
+        <tr>
+            <td>{{ s.nom }}</td>
+            <td>{{ s.dateHeureDebut |date("d/m/Y H:m")}}</td>
+            <td>{{ s.dateLimiteInscription |date("d/m/Y")}}</td>
+            <td>{{ s.inscription|length}} / {{ s.nbInscriptionsMax}}  </td>
+            <td>{{ s.etat.libelle }}</td>
+            <td>inscrit</td>
+            <td>{{ s.organisateur.nom }}</td>
+            <td>action</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
