--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+
+html {
+    height: 100vh;
+}
+
+body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
+footer {
+    padding: 30px 0;
+    margin-bottom: 0;
+}
+
+h1 {
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
+}
+
 table tr th,
 table tr td{
     width: 10em;
@@ -28,10 +54,6 @@ table tr td{
     display: inline-block!important;
 }
 
-h1{
-    text-align: center;
-}
-
 .btn-container{
     text-align: center;
     margin-top: 2em;
@@ -44,3 +66,4 @@ h1{
     color: black;
     text-transform: uppercase;
 }
+
