--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,87 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
+<html lang="fr">
+
+<head>
+
+    {# Meta :
+    encodage UTF-8
+    Responsive
+    informations aux vieux navigateurs web IE
+    #}
+    <meta charset="UTF-8">
+    <meta name="description" content="Site de sorties entre étudiants de l'ENI"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+
+    {#
+    CSS
+    framework Bootstrap
+    Javascript
+    Foontawsome
+    #}
+    {% block stylesheets %}
+        <link href="{{ asset('CSS/style.css') }}" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+              crossorigin="anonymous">
+    {% endblock %}
+
+    {#
+    favicon
+    title
+    #}
+    <link href="{{ asset('images/favicon.png') }}" rel="shortcut icon">
+    <title>{% block title %}Sortir.com{% endblock %}</title>
+
+</head>
+
+<body>
+
+<header>
+    <nav class="navbar navbar-light" style="background-color: #d1ecf1;">
+        <div class="container">
+            <img class="logo" src="{{ asset('images/logo.png') }}">
+
+            <h1 class="navbar-brand" href="{{ path('main') }}">Sortir.com</h1>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Se connecter</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ path('main') }}">Sorties</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('main') }}">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
+<main>
+
+    <div class="container mt-5 mb-5">
+
         {% block body %}{% endblock %}
-    </body>
+
+    </div>
+
+</main>
+
+<footer class="py-3" style="background-color: #d1ecf1;">
+    <div class="container">
+        <p class="text-center">
+            &copy; {{ "now"|date("Y") }} Sortir.com<br>
+            Logo by <a>ENI Ecole</a><br>
+        </p>
+    </div>
+</footer>
+
+</body>
+
 </html>
