--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -16,9 +16,9 @@
     {% endif %}
 
 
-    <label for="inputEmail">Identifiant</label>
+    <label class="mb-1" for="inputEmail">Identifiant</label>
     <input type="texte" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="email ou pseudo" autocomplete="email" required autofocus>
-    <label for="inputPassword">Mot de passe</label>
+    <label class="mt-3 mb-1"for="inputPassword">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
 
@@ -32,12 +32,14 @@
     <div>
         <div class="checkbox mb-3">
             <label>
-                <input type="checkbox" name="_remember_me"> Se souvenir de moi
+                <input class="mt-3" type="checkbox" name="_remember_me"> Se souvenir de moi
             </label>
         </div>
 
 
-        <a href="#" >Mot de passe oublié</a>
+        <a class="mb-5" href="#" >Mot de passe oublié</a>
+        <br>
+        <br>
     <button class="btn btn-lg btn-primary" type="submit">
         Connexion
     </button>
