--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,14 +17,16 @@
     {#
     CSS
     framework Bootstrap
-    Javascript
-    Foontawsome
+    police "dancing" de google
     #}
     {% block stylesheets %}
         <link href="{{ asset('CSS/style.css') }}" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
               crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     {% endblock %}
 
     {#
@@ -43,7 +45,7 @@
         <div class="container">
             <img class="logo" src="{{ asset('images/logo.png') }}">
 
-            <h1 class="navbar-brand" href="{{ path('main') }}">Sortir.com</h1>
+            <h1 style="font-family: 'Dancing Script', cursive; color: #042444; " {{ path('main') }}">Sortir.com</h1>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent"
@@ -73,7 +75,7 @@
 
 </main>
 
-<footer class="py-3" style="background-color: #d1ecf1;">
+<footer class="py-3 fixed-bottom" style="background-color: #d1ecf1;">
     <div class="container">
         <p class="text-center">
             &copy; {{ "now"|date("Y") }} Sortir.com<br>
