--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,6 +5,74 @@
 <div class="row">
     <div class="offset-2 col-8">
         <h1>Filtrer les sorties</h1>
+        <form action="{{ path('recherche') }}" method="post">
+            <div class="row">
+            <div class="form-group col-md-4">
+                <label for="site-select">Site:</label>
+                <select id="site-select" class="form-control"name="site-select">
+                    <option selected>Tous</option>
+                    {% for ss in sites %}
+                    <option> {{ ss.nom }}</option>
+                    {% endfor %}
+                </select>
+                <div class="form-group">
+                    <label for="name-filter">Le nom de la sortie contient:</label>
+                    <input type="text" class="form-control" id="name-filter" name="name-filter" placeholder="Cinéma">
+                </div>
+
+
+                    <div class="row">
+                    <div class="form-group col-md-6">
+                        <label for="date-deb">Entre:</label>
+                        <input type="date" class="form-control" id="date-deb" name="date-deb" placeholder="Apartment, studio, or floor">
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label for="date-fin">et</label>
+                        <input type="date" class="form-control" id="date-fin" name="date-fin" placeholder="Apartment, studio, or floor">
+                    </div>
+                    </div>
+
+                </div>
+                <div class="form-group col-md-6">
+                    <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="1" id="organisateur-filter" name="organisateur-filter">
+                    <label class="form-check-label" for="organisateur-filter">
+                        Sorties dont je suis organisateur
+                    </label>
+                    </div>
+                    <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="1" id="inscrit-filter" name="inscrit-filter">
+                    <label class="form-check-label" for="inscrit-filter">
+                        Sorties auxquelles je suis inscrit/e
+                    </label>
+                    </div>
+                    <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="1" id="noninscrit-filter" name="noninscrit-filter">
+                    <label class="form-check-label" for="noninscrit-filter">
+                        Sorties auxquelles je ne suis pas inscrit/e
+                    </label>
+                    </div>
+                    <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="1" id="passee-filter" name="passee-filter">
+                    <label class="form-check-label" for="noninscrit-filter">
+                        Sorties passées
+                    </label>
+                    </div>
+
+                </div>
+
+                <div class="form-group col-md-2">
+                <div>
+                    <button type="submit" class="btn btn-secondary">Rechercher</button>
+                </div>
+                </div>
+            </div>
+
+
+        </form>
+
+
     </div>
 </div>
 <div class="row">
