--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,18 +15,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
     {#
-    CSS
     framework Bootstrap
-    police "dancing" de google
+    CSS
     #}
     {% block stylesheets %}
-        <link href="{{ asset('CSS/style.css') }}" rel="stylesheet">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
               crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+        <link href="{{ asset('CSS/style.css') }}" rel="stylesheet">
     {% endblock %}
 
     {#
@@ -45,7 +42,8 @@
         <div class="container">
             <img class="logo" src="{{ asset('images/logo.png') }}">
 
-            <h1 style="font-family: 'Dancing Script', cursive; color: #042444; " {{ path('main') }}">Sortir.com</h1>
+            {#  TO DO : intégrer dans le CSS #}
+            <h1 style="font-family: 'Dancing Script', cursive; color: #042444;" {{ path('main') }}">Sortir.com</h1>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent"
@@ -55,10 +53,9 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Se connecter</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ path('main') }}">Sorties</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="{{ path('main') }}">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ path('main') }}">Sorties</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Mon profil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a></li>
                 </ul>
             </div>
         </div>
@@ -75,6 +72,7 @@
 
 </main>
 
+{#  TO DO : intégrer dans le CSS #}
 <footer class="py-3 fixed-bottom" style="background-color: #d1ecf1;">
     <div class="container">
         <p class="text-center">
@@ -83,6 +81,15 @@
         </p>
     </div>
 </footer>
+
+{#  TO DO : intégrer dans un fichier JS #}
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 
 </body>
 
