--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,47 +3,61 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<div  class="offset-3 col-6">
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger"> Identifiant ou mot de passe incorrect{#*{{ error.messageKey|trans(error.messageData, 'security') }}*/#}</div>
-    {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-
-
-    <label class="mb-1" for="inputEmail">Identifiant</label>
-    <input type="texte" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="email ou pseudo" autocomplete="email" required autofocus>
-    <label class="mt-3 mb-1"for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-
-
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-
-    <div>
-        <div class="checkbox mb-3">
-            <label>
-                <input class="mt-3" type="checkbox" name="_remember_me"> Se souvenir de moi
-            </label>
-        </div>
-
-
-        <a class="mb-5" href="#" >Mot de passe oublié</a>
-        <br>
-        <br>
-    <button class="btn btn-lg btn-primary" type="submit">
-        Connexion
-    </button>
+    <div class="container offset-3 col-6 mt-2 mb-5">
+        <h1 style="font-family: 'Dancing Script', cursive; color: #042444;"> Se connecter</h1>
     </div>
-</form>
-</div>
+
+    <div class="offset-3 col-6">
+
+        {% if error %}
+            <div class="alert alert-danger"> Identifiant ou mot de passe
+                incorrect{# *{{ error.messageKey|trans(error.messageData, 'security') }}*/ #}</div>
+        {% endif %}
+
+        {% if app.user %}
+            <div class="mb-3">
+                Vous êtes connecté.e avec le mail : {{ app.user.username }}
+                <br>
+                <br>
+                <button class="btn btn-lg btn-outline-danger" onclick="{{ path('app_logout') }}">
+                    Se déconnecter
+                </button>
+            </div>
+            <br>
+        {% endif %}
+
+        <form method="post">
+
+            <label class="mb-1" for="inputEmail">Identifiant</label>
+            <input type="texte" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
+                   placeholder="email ou pseudo" autocomplete="email" required autofocus>
+            <label class="mt-3 mb-1" for="inputPassword">Mot de passe</label>
+            <input type="password" name="password" id="inputPassword" class="form-control"
+                   autocomplete="current-password" required>
+
+
+            <input type="hidden" name="_csrf_token"
+                   value="{{ csrf_token('authenticate') }}"
+            >
+
+
+            <div>
+                <div class="checkbox mb-3">
+                    <label>
+                        <input class="mt-3" type="checkbox" name="_remember_me"> Se souvenir de moi
+                    </label>
+                </div>
+
+
+                <a class="mb-5" href="#">Mot de passe oublié</a>
+                <br>
+                <br>
+                <button class="btn btn-lg btn-secondary" type="submit">
+                    Connexion
+                </button>
+                <br>
+            </div>
+        </form>
+    </div>
 {% endblock %}
