--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -2,9 +2,15 @@
 
 
 {% block body %}
+    <div class="row">
+        <div class="offset-11 ">
+            <p>Date du jour: {{ "now"|date("m/d/Y") }}</p>
+            <p>Participant: {{ user.nom }}  {{ user.prenom }}</p>
+        </div>
+    </div>
 <div class="row">
-    <div class="offset-2 col-8">
-        <h1>Filtrer les sorties</h1>
+    <div class="offset-1 col-9 blockfiltre">
+        <h1 class="titlefiltre">Filtrer les sorties</h1>
         <form action="{{ path('recherche') }}" method="post">
             <div class="row">
             <div class="form-group col-md-4">
@@ -24,7 +30,7 @@
                     <div class="row">
                     <div class="form-group col-md-6">
                         <label for="date-deb">Entre:</label>
-                        <input type="date" class="form-control" id="date-deb" name="date-deb" placeholder="Apartment, studio, or floor">
+                        <input onchange=dateFinMini(this.value) type="date" class="form-control" id="date-deb" name="date-deb" placeholder="Apartment, studio, or floor">
                     </div>
 
                     <div class="form-group col-md-6">
@@ -76,7 +82,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="offset-2 col-8">
+    <div class="offset-1 col-9 blocktableau">
     <table class="table table-striped table-hover">
         <thead>
         <tr>
@@ -105,8 +111,8 @@
                     <td>{{ s.organisateur.nom }}</td>
                     <td> <button
                                 class="btn btn-primary">
-                            <a href="{# {{ path('#',{id: s.id}) }}#}">
-                                <i class="fa-solid fa-edit">Modifier</i></a>
+                            <a href="{# {{ path('#',{id: s.id}) }}#}"></a>
+                                <i class="fa-solid fa-edit">Modifier</i>
                         </button>
                         &nbsp;
                         <button
@@ -204,7 +210,7 @@
         </tbody>
     </table>
         </div>
-    <div class="offset-2 col-8">
+    <div class="offset-1 col-9">
         <button class="btn btn-secondary">
             <a href="{# {{ path('#',{id: user.id) }}#}"></a>
                 Créer une sortie
@@ -212,6 +218,12 @@
     </div>
 </div>
 
+<script>
+    function dateFinMini(value) {
+        //alert(value);
+        document.getElementById("date-fin").setAttribute("min",value);
+    }
+</script>
 
 
 {% endblock %}
