--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,15 +15,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
     {#
-    framework Bootstrap
     CSS
+    framework Bootstrap
+    police "dancing" de google
     #}
     {% block stylesheets %}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 
+        <link href="{{ asset('CSS/styles.css') }}" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
               crossorigin="anonymous">
-        <link href="{{ asset('CSS/style.css') }}" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     {% endblock %}
 
     {#
@@ -32,6 +37,10 @@
     #}
     <link href="{{ asset('images/favicon.png') }}" rel="shortcut icon">
     <title>{% block title %}Sortir.com{% endblock %}</title>
+    {#
+    recuperation des icons font-awesome
+    #}
+
 
 </head>
 
@@ -42,37 +51,28 @@
         <div class="container">
             <img class="logo" src="{{ asset('images/logo.png') }}">
 
-            {#  TO DO : intégrer dans le CSS #}
-            <h1 style="font-family: 'Dancing Script', cursive; color: #042444;" {{ path('main') }}">Sortir.com</h1>
-
+            <h1 style="font-family: 'Dancing Script', cursive; color: #042444; " {{ path('main') }}">Sortir.com</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ path('main') }}">Sorties</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">Mon profil</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Se connecter</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ path('main') }}">Sorties</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('main') }}">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
-
 <main>
-
     <div class="container mt-5 mb-5">
-
         {% block body %}{% endblock %}
-
     </div>
-
 </main>
-
-{#  TO DO : intégrer dans le CSS #}
 <footer class="py-3 fixed-bottom" style="background-color: #d1ecf1;">
     <div class="container">
         <p class="text-center">
@@ -81,16 +81,5 @@
         </p>
     </div>
 </footer>
-
-{#  TO DO : intégrer dans un fichier JS #}
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
-
 </body>
-
 </html>
